--- a/aplikasi-pendaftaran-spring/src/main/resources/templates/sekolah/form.html
+++ b/aplikasi-pendaftaran-spring/src/main/resources/templates/sekolah/form.html
@@ -11,7 +11,7 @@
             <h1>Edit Sekolah</h1>
 
 
-            <form class="form-horizontal" method="post" th:object="${sekolah}">
+            <form class="form-horizontal" method="post" th:action="form" th:object="${sekolah}">
                 <div class="form-group"  th:classappend="${#fields.hasErrors('kode')} ? 'has-error'">
                     <label for="kode" class="col-sm-2 control-label">Kode</label>
                     <div class="col-sm-10">
